Fix z-index, media query on 1260

--- a/resources/src/pages/landingPage.styl
+++ b/resources/src/pages/landingPage.styl
@@ -64,7 +64,7 @@
 
 .hero-text
   color #fff
-  z-index 10
+  z-index 5
   position fixed
   top 70px
   left 50%
