--- a/resources/src/partials/elements.styl
+++ b/resources/src/partials/elements.styl
@@ -1,3 +1,10 @@
+*, *::before, *::after
+  box-sizing border-box
+
+html, body
+  overflow-x hidden
+  max-width 100vw
+
 body
   background-color body_background_color
   margin 0
@@ -351,6 +358,7 @@ a
 
 .push
   clear both
+  margin-top 100vh
 
 .has-two-columns
   display flex
